--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="Container"> 
+        <!--Header-->
+         <header>
+            <h1>Faith Fechser</h1>
+            <nav>
+                <ul>
+                    <li><a href="">About Me</a></li>
+                    <li><a href="">Work</a></li>
+                    <li><a href="">Contact Me</a></li>
+                    <li><a href="https://www.google.com">Resume</a></li>
+                </ul>
+            </nav>
+         </header>
+         <!--Banner-->
+         <section>
+            <img src="" alt="Banner image example description">
+            <p>example text over image</p>
+         </section>
+        <main>
+            <!--About Me-->
+            <section class="About-Me">
+            <div class="Line-Border">
+                <h2>ABOUT ME</h2>
+            </div>
+            <p>Faith Fechser is currently being educated in web development.</p>
+            </section>
 
-<!--Header-->
-<div class="Container">
-    <section class="Header">
-    <header>
-        <h1>Faith Fechser</h1>
-    </header>
-</section>
-</div>
-<!--About Me-->
+            <!--Work-->
+            <section class="Work">
+                <div class="Line-Border">
+                    <h2>WORK</h2>
+                </div>
+                <article>
+                    <div class="Image-1">
+                        <img src="example">
+                        <p>example text</p>
+                    </div>
+                </article>
+            </section>
 
-<!--Contact info-->
-
-<!--Work-->
+            <!--Contact Me-->
+            <section class="Contact-Me">
+                <div class="Line-Border">
+                    <h2>CONTACT ME</h2>
+                </div>
+            </section>
+        </main>
+    </div> 
+</body>
+</html>
