Add banner image and example body work for html file, add css header and nav customization

--- a/index.html
+++ b/index.html
@@ -41,8 +41,32 @@
                     <h2>WORK</h2>
                 </div>
                 <article>
-                    <div class="Image-1">
-                        <img src="example">
+                    <div class="Image-1">example
+                        <img src="">
+                        <p>example text</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="Image-2">example
+                        <img src="">
+                        <p>example text</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="Image-3">example
+                        <img src="">
+                        <p>example text</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="Image-4">example
+                        <img src="">
+                        <p>example text</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="Image-5">example
+                        <img src="">
                         <p>example text</p>
                     </div>
                 </article>
@@ -52,6 +76,10 @@
             <section class="Contact-Me">
                 <div class="Line-Border">
                     <h2>CONTACT ME</h2>
+                    <ul>
+                        <li><a href="faithfechser@gmail.com">Email</a></li>
+                        <li><a href="https://www.linkedin.com/in/faith-fechser/">LinkedIn</a></li>
+                    </ul>
                 </div>
             </section>
         </main>
