modify index.html code and its assets

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
          </header>
          <!--Banner-->
          <section>
-            <img src="" alt="Banner image example description">
+            <img src="Banner.jpg" alt="Blue Banner Image">
             <p>example text over image</p>
          </section>
         <main>
             <!--About Me-->
             <section class="About-Me">
-            <div class="Line-Border">
+            <aside class="Line-Border">
                 <h2>ABOUT ME</h2>
-            </div>
-            <p>Faith Fechser is currently being educated in web development.</p>
+            </aside>
+            <p>Faith Fechser is an artist, video editor, and student in web development.</p>
             </section>
 
             <!--Work-->
+            <aside class="Line-Border">
+                <h2>WORK</h2>
+            </aside>
             <section class="Work">
-                <div class="Line-Border">
-                    <h2>WORK</h2>
-                </div>
                 <article>
                     <div class="Image-1">example
                         <img src="">
@@ -73,9 +73,10 @@
             </section>
 
             <!--Contact Me-->
+            <aside>
+                <h2>CONTACT ME</h2></aside>
             <section class="Contact-Me">
                 <div class="Line-Border">
-                    <h2>CONTACT ME</h2>
                     <ul>
                         <li><a href="faithfechser@gmail.com">Email</a></li>
                         <li><a href="https://www.linkedin.com/in/faith-fechser/">LinkedIn</a></li>
