add more pseudocode and modify css and html code, add example text

--- a/index.html
+++ b/index.html
@@ -1,108 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/style.css">
-    <title>Document</title>
-</head>
-<!--Body-->
-<body>
-    <div class="Container"> 
-        <!--Header and Navigation links-->
-         <header>
-            <h1>Faith Fechser<span class="portfolio"></span></h1>
-            <nav>
-                <ul> <!--About Me Link-->
-                    <li>
-                        <a href="#About-Me">About Me</a>
-                    </li>
-                    <li> <!--Work Link-->
-                        <a href="#Work">Work</a>
-                    </li>
-                    <li> <!--Contact Me Link-->
-                        <a href="#Contact-Me">Contact Me</a>
-                    </li>
-                    <li> <!--Resume Link-->
-                        <a href="https://drive.google.com/file/d/1YWCdiOu7d8moQW25GBvUp7qMGDkGXa-d/view?usp=sharing">Resume</a>
-                    </li>
-                </ul>
-            </nav>
-         </header>
-         <!--Banner-->
-         <section>
-            <img src="Banner.jpg" alt="Blue Banner Image">
-            <p>example text over image</p>
-         </section>
-        <main>
-            <!--About Me-->
-            <aside class="Line-Border">
-               <h2>ABOUT ME</h2>
-            </aside>
-            <section class="About-Me">
-            <p>Faith Fechser is an artist, video editor, and student in web development.</p>
-            </section>
+<!--Head info and references/relations-->
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./Assets/style.css">
+        <title>Document</title>
+    </head>
+    <!--Body-->
+    <body>
+        <div class="Container"> 
+            <!--Header and Navigation links-->
+            <header>
+                <h1>Faith Fechser<span class="portfolio"></span></h1>
+                <nav>
+                    <ul> <!--About Me Link-->
+                        <li>
+                            <a href="#About-Me">About Me</a>
+                        </li>
+                        <li> <!--Work Link-->
+                            <a href="#Work">Work</a>
+                        </li>
+                        <li> <!--Contact Me Link-->
+                            <a href="#Contact-Me">Contact Me</a>
+                        </li>
+                        <li> <!--Resume Link-->
+                            <a href="https://drive.google.com/file/d/1YWCdiOu7d8moQW25GBvUp7qMGDkGXa-d/view?usp=sharing">Resume</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <!--Header and Navigation Links End-->
 
-            <!--Work-->
-            <aside class="Line-Border">
-                <h2>WORK</h2>
-            </aside>
-            <section class="Work">
-                <article>
-                    <div class="Image-1">example
-                        <img src="">
-                        <p>example text</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="Image-2">example
-                        <img src="">
-                        <p>example text</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="Image-3">example
-                        <img src="">
-                        <p>example text</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="Image-4">example
-                        <img src="">
-                        <p>example text</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="Image-5">example
-                        <img src="">
-                        <p>example text</p>
-                    </div>
-                </article>
+            <!--Banner-->
+            <section>
+                <img src="Banner.jpg" alt="Blue Banner Image">
+                <p>example text over image</p>
             </section>
-        </main>
-    </div> 
-</body>
-<!--Footer-->
-<footer>
-    <!--Contact Me-->
-    <aside>
-        <h2>CONTACT ME</h2>
-    </aside>
-    <section class="Contact-Me">
-        <nav class="Line-Border">
-            <ul>
-                <li><!--Email Link-->
-                    <a href="faithfechser@gmail.com">Email</a>
-                </li>
-                <li><!--Phone Number-->
-                    <a href="">Phone Number</a>
-                </li>
-                <li><!--LinkedIn Link-->
-                    <a href="https://www.linkedin.com/in/faith-fechser/">LinkedIn</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
-</footer>
+            <!--Main-->
+            <main>
+                <!--About Me-->
+                <aside class="Line-Border">
+                <h2>ABOUT ME</h2>
+                </aside>
+                <section class="About-Me">
+                    <p>Faith Fechser is an artist, video editor, and student in web development. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </section>
+
+                <!--Work Section-->
+                <aside class="Line-Border">
+                    <h2>WORK</h2>
+                </aside>
+                <section class="Work">
+                    <article>
+                    <!--Featured Project-->
+                        <div class="Image-1">
+                            <img src="" alt="Featured Project Image">
+                            <p><a href=https://github.com/faithfechser/Horiseon-C1>Horiseon Project</a></p>
+                        </div>
+                    </article>
+                    <!--Sub Project 1-->
+                    <article>
+                        <div class="Image-2">
+                            <img src="" alt="Sub Project Image 2">
+                            <p><a href=https://github.com/faithfechser/prework-study-guide>HTML Study Guide</a></p>
+                        </div>
+                    </article>
+                    <!--Sub Project 2-->
+                    <article>
+                        <div class="Image-3">
+                            <img src="" alt="Sub Project Image 3">
+                            <p><a href=><!--example text placeholder--></a></p>
+                        </div>
+                    </article>
+                    <!--Project 3-->
+                    <article>
+                        <div class="Image-4">
+                            <img src="" alt="Sub Project Image 4">
+                            <p><a href=><!--example text placeholder--></a></p>
+                        </div>
+                    </article>
+                    <!--Project 4-->
+                    <article>
+                        <div class="Image-5">
+                            <img src="" alt="Sub Project Image 5">
+                            <p><a href=><!--example text placeholder--></a></p>
+                        </div>
+                    </article>
+                </section>
+                <!--Work Section End-->
+            </main>
+            <!--Main End-->
+
+            <!--Footer-->
+            <footer>
+                <!--Contact Me-->
+                <aside>
+                    <h2>CONTACT ME</h2>
+                </aside>
+                <section class="Contact-Me">
+                    <nav class="Line-Border">
+                        <ul>
+                            <li><!--Email Link-->
+                                <a href="faithfechser@gmail.com">Email</a>
+                            </li>
+                            <li><!--Phone Number-->
+                                <a href="">Phone Number</a>
+                            </li>
+                            <li><!--LinkedIn Link-->
+                                <a href="https://www.linkedin.com/in/faith-fechser/">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </section>
+            </footer>
+            <!--Footer End-->
+        </div> 
+    </body>
+    <!--Body End-->
 </html>
