Add onto about me description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>ABOUT ME</h2>
                 </aside>
                 <section class="About-Me">
-                    <p>Faith Fechser is an artist, video editor, and student in web development. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Faith Fechser is an ambitious and goal-oriented worker with a great work ethic. She has also become a very quick and adaptable worker that does well in a fast-paced work environment. Creativity and artistic ability is a very strong virtue of Faith's that increasingly assists her work to be unique and fufilling. Additionally, Faith is heavily educated in several computer science related topics and continues her education in coding. To this day, Faith builds her experience in digital art, video editing, and web design through freelance and personal work.</p>
                 </section>
 
                 <!--Work Section-->
