edit format and style of webpage, add image placeholders

--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
 
             <!--Banner-->
             <section>
-                <img src="Banner.jpg" alt="Blue Banner Image">
-                <p>example text over image</p>
+                <img src="Assets/Banner.jpg" alt="Blue Banner Image">
+                <!--<p>example text over image</p>-->
             </section>
             <!--Main-->
-            <main>
-                <!--About Me-->
+            <!--About Me-->
+            <main class ="About Me Section">
                 <aside class="Line-Border">
                 <h2>ABOUT ME</h2>
                 </aside>
                 <section class="About-Me">
                     <p>Faith Fechser is an ambitious and goal-oriented worker with a great work ethic. She has also become a very quick and adaptable worker that does well in a fast-paced work environment. Creativity and artistic ability is a very strong virtue of Faith's that increasingly assists her work to be unique and fufilling. Additionally, Faith is heavily educated in several computer science related topics and continues her education in coding. To this day, Faith builds her experience in digital art, video editing, and web design through freelance and personal work.</p>
                 </section>
-
-                <!--Work Section-->
+            </main>
+            <!--Work Section-->
+            <main class="Work Section">
                 <aside class="Line-Border">
                     <h2>WORK</h2>
                 </aside>
@@ -56,35 +57,35 @@
                     <article>
                     <!--Featured Project-->
                         <div class="Image-1">
-                            <img src="" alt="Featured Project Image">
+                            <img src="Assets/Featured-Image-Placeholder.jpg" alt="Featured Project Image">
                             <p><a href=https://github.com/faithfechser/Horiseon-C1>Horiseon Project</a></p>
                         </div>
                     </article>
                     <!--Sub Project 1-->
                     <article>
                         <div class="Image-2">
-                            <img src="" alt="Sub Project Image 2">
+                            <img src="Assets/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 2">
                             <p><a href=https://github.com/faithfechser/prework-study-guide>HTML Study Guide</a></p>
                         </div>
                     </article>
                     <!--Sub Project 2-->
                     <article>
                         <div class="Image-3">
-                            <img src="" alt="Sub Project Image 3">
+                            <img src="Assets/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 3">
                             <p><a href=><!--example text placeholder--></a></p>
                         </div>
                     </article>
-                    <!--Project 3-->
+                    <!--Sub Project 3-->
                     <article>
                         <div class="Image-4">
-                            <img src="" alt="Sub Project Image 4">
+                            <img src="Assets/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 4">
                             <p><a href=><!--example text placeholder--></a></p>
                         </div>
                     </article>
-                    <!--Project 4-->
+                    <!--Sub Project 4-->
                     <article>
                         <div class="Image-5">
-                            <img src="" alt="Sub Project Image 5">
+                            <img src="Assets/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 5">
                             <p><a href=><!--example text placeholder--></a></p>
                         </div>
                     </article>
