general code changes, featured project change

--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
                     <!--Featured Project-->
                         <div class="Image-1">
                             <img src="Assets/images/Featured-Image-Placeholder.jpg" alt="Featured Project Image">
-                            <p><a href=https://github.com/faithfechser/Horiseon-C1>Horiseon Project</a></p>
+                            <p><a href=https://blakee-37.github.io/404-Found>Headline-HQ</a></p>
                         </div>
                     </article>
                     <!--Sub Project 1 & 2-->
                     <div class="Work-2-3">
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 2">
-                        <p><a href=https://github.com/faithfechser/prework-study-guide>HTML Study Guide</a></p>
+                        <p><a href=https://github.com/faithfechser/Horiseon-C1>Horiseon Project</a></p>
                         <!--Project Separation-->
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 3">
-                        <p><a href=><!--example text placeholder--></a></p>
+                        <p><a href=https://github.com/faithfechser/Password-Generator-C3>Password Generator</a></p>
                     </div>
                     <!--Sub Project 3 & 4-->
                     <div class="Work-4-5">
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 4">
-                        <p><a href=><!--example text placeholder--></a></p>
+                        <p><a href=https://github.com/faithfechser/Code-Quiz-C4>Code Quiz</a></p>
                         <!--Project Separation-->
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 5">
-                        <p><a href=><!--example text placeholder--></a></p>
+                        <p><a href=https://github.com/faithfechser/Work-Day-Scheduler-C5>Work Day Scheduler</a></p>
                     </div>
                 </section>
             </main>
