new featured project

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <!--Featured Project-->
                         <div class="Image-1">
                             <img src="Assets/images/Featured-Image-Placeholder.jpg" alt="Featured Project Image">
-                            <p><a href=https://blakee-37.github.io/404-Found>Headline-HQ</a></p>
+                            <p><a href=https://project-united.herokuapp.com>Project United</a></p>
                         </div>
                     </article>
                     <!--Sub Project 1 & 2-->
                     <div class="Work-2-3">
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 2">
-                        <p><a href=https://github.com/faithfechser/Horiseon-C1>Horiseon Project</a></p>
+                        <p><a href=https://blakee-37.github.io/404-Found>Headline-HQ</a></p>
                         <!--Project Separation-->
                         <img src="Assets/images/Sub-Project-Image-Placeholder.jpg" alt="Sub Project Image 3">
                         <p><a href=https://github.com/faithfechser/Password-Generator-C3>Password Generator</a></p>
