add new featured project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                     <!--Featured Project-->
                         <div class="Image-1">
                             <img src="Assets/images/Featured-Image-Placeholder.jpg" alt="Featured Project Image">
-                            <p><a href=https://project-united.herokuapp.com>Project United</a></p>
+                            <p><a href=https://intense-inlet-71364-4ce35d6f5d82.herokuapp.com>Fitness in your Schedule</a></p>
+                            
+                            <!-- <p><a href=https://project-united.herokuapp.com>Project United</a></p> -->
                         </div>
                     </article>
                     <!--Sub Project 1 & 2-->
